[tool.poetry]
name = "discord.ext.context"
version = "0.1.2"
description = "Globally accessable context for discord.py events."
authors = ["scragly <29337040+scragly@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "discord/ext" },
]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
